<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_profile_header"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_profile_header"
            android:background="@color/black_3f3a3a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/icons_36px_profile_normal"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/noto_sans_bold"
                android:maxLines="1"
                android:text="@string/profile_default_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/text_profile_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image_profile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="@string/profile_default_name" />

            <TextView
                android:id="@+id/text_profile_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/noto_sans"
                android:maxLines="2"
                android:text="@string/profile_default_information"
                android:textColor="@color/gray_999999"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image_profile"
                app:layout_constraintTop_toBottomOf="@+id/text_name"
                tools:text="@string/profile_default_information" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_profile_order_title"
            style="@style/ProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/profile_order_title"
            app:layout_constraintEnd_toStartOf="@+id/text_view_all"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_profile_header"
            tools:text="@string/profile_order_title" />

        <TextView
            android:id="@+id/text_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:drawableRight="@drawable/ic_arrow_right_gray_646464_20dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/view_all"
            android:textColor="@color/gray_646464"
            android:textSize="13sp"
            app:fontFamily="@font/noto_sans"
            app:layout_constraintBottom_toBottomOf="@+id/text_profile_order_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_profile_order_title"
            app:layout_constraintTop_toTopOf="@+id/text_profile_order_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_awating_payment"
            style="@style/ProfileButton"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:drawableTop="@drawable/icons_24px_awaitingpayment"
            android:text="@string/awaiting_payment"
            app:layout_constraintEnd_toStartOf="@+id/button_awaiting_shipment"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_profile_order_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_awaiting_shipment"
            style="@style/ProfileButton"
            android:drawableTop="@drawable/icons_24px_awaitingshipment"
            android:text="@string/awaiting_shipment"
            app:layout_constraintBottom_toBottomOf="@+id/button_awating_payment"
            app:layout_constraintEnd_toStartOf="@+id/button_shiped"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_awating_payment"
            app:layout_constraintTop_toTopOf="@+id/button_awating_payment" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_shiped"
            style="@style/ProfileButton"
            android:drawableTop="@drawable/icons_24px_shipped"
            android:text="@string/shipped"
            app:layout_constraintBottom_toBottomOf="@+id/button_awaiting_shipment"
            app:layout_constraintEnd_toStartOf="@+id/button_awating_review"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_awaiting_shipment"
            app:layout_constraintTop_toTopOf="@+id/button_awaiting_shipment" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_awating_review"
            style="@style/ProfileButton"
            android:drawableTop="@drawable/icons_24px_awaitingreview"
            android:text="@string/awaiting_review"
            app:layout_constraintBottom_toBottomOf="@+id/button_shiped"
            app:layout_constraintEnd_toStartOf="@+id/button_exchange"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_shiped"
            app:layout_constraintTop_toTopOf="@+id/button_shiped" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_exchange"
            style="@style/ProfileButton"
            android:layout_marginEnd="16dp"
            android:drawableTop="@drawable/icons_24px_exchange"
            android:text="@string/exchange"
            app:layout_constraintBottom_toBottomOf="@+id/button_awating_review"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_awating_review"
            app:layout_constraintTop_toTopOf="@+id/button_awating_review" />

        <TextView
            android:id="@+id/text_service_title"
            style="@style/ProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/profile_service_title"
            app:layout_constraintStart_toStartOf="@+id/button_awating_payment"
            app:layout_constraintTop_toBottomOf="@+id/button_awating_payment" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_starred"
            style="@style/ProfileButton"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:drawableTop="@drawable/icons_24px_starred"
            android:text="@string/starred"
            app:layout_constraintEnd_toStartOf="@+id/button_notification"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_service_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_notification"
            style="@style/ProfileButton"
            android:layout_marginStart="8dp"
            android:drawableTop="@drawable/icons_24px_notification"
            android:text="@string/notification"
            app:layout_constraintBottom_toBottomOf="@+id/button_starred"
            app:layout_constraintEnd_toStartOf="@+id/button_refunded"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_starred"
            app:layout_constraintTop_toTopOf="@+id/button_starred" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_refunded"
            style="@style/ProfileButton"
            android:layout_marginStart="8dp"
            android:drawableTop="@drawable/icons_24px_refunded"
            android:text="@string/refunded"
            app:layout_constraintBottom_toBottomOf="@+id/button_notification"
            app:layout_constraintEnd_toStartOf="@+id/button_address"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_notification"
            app:layout_constraintTop_toTopOf="@+id/button_notification" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_address"
            style="@style/ProfileButton"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:drawableTop="@drawable/icons_24px_address"
            android:text="@string/address"
            app:layout_constraintBottom_toBottomOf="@+id/button_refunded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_refunded"
            app:layout_constraintTop_toTopOf="@+id/button_refunded" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_customer_service"
            style="@style/ProfileButton"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:drawableTop="@drawable/icons_24px_customerservice"
            android:text="@string/customer_service"
            app:layout_constraintEnd_toStartOf="@+id/button_system_feeback"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_starred" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_system_feeback"
            style="@style/ProfileButton"
            android:layout_marginStart="8dp"
            android:drawableTop="@drawable/icons_24px_systemfeedback"
            android:text="@string/system_feedback"
            app:layout_constraintBottom_toBottomOf="@+id/button_customer_service"
            app:layout_constraintEnd_toStartOf="@+id/button_register_cellphone"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_customer_service"
            app:layout_constraintTop_toTopOf="@+id/button_customer_service" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_register_cellphone"
            style="@style/ProfileButton"
            android:layout_marginStart="8dp"
            android:drawableTop="@drawable/icons_24px_registercellphone"
            android:text="@string/register_phone"
            app:layout_constraintBottom_toBottomOf="@+id/button_system_feeback"
            app:layout_constraintEnd_toStartOf="@+id/button_settings"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_system_feeback"
            app:layout_constraintTop_toTopOf="@+id/button_system_feeback" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_settings"
            style="@style/ProfileButton"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:drawableTop="@drawable/icons_24px_settings"
            android:text="@string/settings"
            app:layout_constraintBottom_toBottomOf="@+id/button_register_cellphone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_register_cellphone"
            app:layout_constraintTop_toTopOf="@+id/button_register_cellphone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>