<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.yazhiyue.stylish.add2cart.Add2cartViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_corner">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            android:text="@{viewModel.product.title}"
            android:textColor="@color/black_3f3a3a"
            android:textSize="18sp"
            app:fontFamily="@font/noto_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="厚實毛呢格子外套" />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            android:text="@{`NT$ ` + Integer.toString(viewModel.product.price)}"
            android:textColor="@color/black_3f3a3a"
            android:textSize="18sp"
            app:fontFamily="@font/noto_sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            tools:text="NT$2140" />

        <View
            android:id="@+id/view_top_separation"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray_cccccc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_price" />

        <TextView
            android:id="@+id/text_select_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/select_color"
            android:textColor="@color/gray_646464"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_top_separation" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_color_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_select_color" />

        <TextView
            android:id="@+id/text_select_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/select_size"
            android:textColor="@color/gray_646464"
            android:textSize="14sp"
            android:visibility="@{(viewModel.selectedColor != null ? View.VISIBLE : View.GONE)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_color_selector" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_size_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:visibility="@{(viewModel.selectedColor != null ? View.VISIBLE : View.GONE)}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_select_size" />

        <TextView
            android:id="@+id/text_quantity_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/select_amount"
            android:textColor="@{(viewModel.quantity > viewModel.selectedVariant.stock) ? @color/red_d0021b : @color/gray_646464}"
            android:textSize="14sp"
            android:visibility="@{(viewModel.selectedVariant != null ? View.VISIBLE : View.GONE)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_size_selector" />

        <TextView
            android:id="@+id/text_current_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@{@string/stock + `: ` + String.valueOf(viewModel.selectedVariant.stock)}"
            android:textColor="@{(viewModel.quantity > viewModel.selectedVariant.stock) ? @color/red_d0021b : @color/gray_646464}"
            android:textSize="14sp"
            android:visibility="@{(viewModel.selectedVariant != null ? View.VISIBLE : View.GONE)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_size_selector" />

        <EditText
            android:id="@+id/edit_quantity_editor"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_add2cart_select_amount"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:inputType="number"
            android:text="@={viewModel.convertIntToString(viewModel.quantity)}"
            android:textColor="@color/black_3f3a3a"
            android:textSize="16sp"
            android:visibility="@{(viewModel.selectedVariant != null ? View.VISIBLE : View.INVISIBLE)}"
            app:amount="@{viewModel.quantity}"
            app:layout_constraintEnd_toStartOf="@+id/button_add"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_sub"
            app:layout_constraintTop_toBottomOf="@+id/text_quantity_select"
            app:stock="@{viewModel.selectedVariant.stock}" />

        <ImageButton
            android:id="@+id/button_add"
            android:layout_width="@dimen/size_add2cart_select"
            android:layout_height="@dimen/size_add2cart_select"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_add"
            android:onClick="@{() -> viewModel.increaseQuantity()}"
            android:visibility="@{(viewModel.selectedVariant != null ? View.VISIBLE : View.GONE)}"
            app:editorControllerStatus="@{viewModel.quantity &lt; viewModel.selectedVariant.stock}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edit_quantity_editor"
            app:layout_constraintTop_toBottomOf="@+id/text_quantity_select" />

        <ImageButton
            android:id="@+id/button_sub"
            android:layout_width="@dimen/size_add2cart_select"
            android:layout_height="@dimen/size_add2cart_select"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_sub"
            android:onClick="@{() -> viewModel.decreaseQuantity()}"
            android:visibility="@{(viewModel.selectedVariant != null ? View.VISIBLE : View.GONE)}"
            app:editorControllerStatus="@{viewModel.selectedVariant.stock > 1 &amp;&amp; viewModel.quantity > 1}"
            app:layout_constraintEnd_toStartOf="@+id/edit_quantity_editor"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_quantity_select" />

        <TextView
            android:id="@+id/text_stock_not_enough"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/stock_not_enough"
            android:textColor="@color/red_d0021b"
            android:textSize="14sp"
            android:visibility="@{(viewModel.selectedVariant == null ? View.GONE : (viewModel.quantity > viewModel.selectedVariant.stock) ? View.VISIBLE : View.GONE)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_sub" />

        <View
            android:id="@+id/view_bottom_separation"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray_cccccc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_sub" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_add_to_cart"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@{viewModel.selectedVariant == null ? @color/gray_999999 : viewModel.quantity &lt;= viewModel.selectedVariant.stock ? @color/black_3f3a3a : @color/gray_999999}"
            android:clickable="@{viewModel.selectedVariant == null ? false : viewModel.quantity &lt;= viewModel.selectedVariant.stock ? true : false}"
            android:text="@string/add2cart"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:fontFamily="@font/noto_sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_bottom_separation" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>